<resources>
    <string name="app_name">MADLabExam2</string>
    <string name="TastyEats" />
    <string name="forgetPass">Forget Password?</string>
    <string name="SignIn">Sign In</string>
    <string name="WelcomeBack">Welcome Back</string>
    <string name="Password">Password</string>
    <string name="EmailsorPhonenumber">Emails or Phone number</string>
    <string name="orcontinuewith">or continue with</string>
    <string name="DontHaveanAccount">Don\'t Have an Account?</string>
    <string name="SignUp">Sign Up</string>
    <string name="GettingStarted">Getting Started</string>
    <string name="FullName">Full Name</string>
    <string name="Phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="term">By Signing up, you agree to our terms and conditions</string>
    <string name="btnSignup">Sign Up</string>
    <string name="accounthave">Already Have An Account?</string>
    <string name="Hello">Hello Binuki</string>
    <string name="search">Search</string>
    <string name="findfood">Find Your Food</string>
    <string name="offer">Special Offers</string>
    <string name="seeMore">See more > </string>
    <string name="recMeals">Recommended Meals </string>
    <string name="SeaFoodSpecial">Sea Food Special</string>
    <string name="CheeseBurger">Cheese Burger</string>
    <string name="FrenchFries">French Fries</string>
    <string name="PopularRestaurants">Popular Restaurants</string>
    <string name="PizzaHut">Pizza Hut</string>
    <string name="BurgerKing">Burger King</string>
    <string name="McDonalds">McDonald s</string>
    <string name="KFC">KFC</string>
    <string name="all">All</string>
    <string name="pizza">Pizza</string>
    <string name="Burger">Burger</string>
    <string name="Juice">Juice</string>
    <string name="RecentSearch">Recent Search</string>
    <string name="TopCategory">Top Category</string>
    <string name="ChickenPizza">Chicken Pizza</string>
    <string name="price1">Rs.1500.00</string>
    <string name="price2">Rs.700.00</string>
    <string name="profile">Profile</string>
    <string name="profilename">Binuki Mihara</string>
    <string name="points">Your Points 150</string>
    <string name="MyAccounts">My Accounts</string>
    <string name="PersonalInformation">Personal Information</string>
    <string name="MyOrders">My Orders</string>
    <string name="Notifications">Notifications</string>
    <string name="EditPassword">Edit Password</string>
    <string name="HelpandSupport">Help and Support</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="FAQandHelp">FAQ and Help</string>
    <string name="About">About</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="ChilliChickenPizza">Chilli Chicken Pizza</string>
    <string name="time"> 25-30 mins</string>
    <string name="description">A pizza topped with spicy chicken, green chillies, onions and mozzarella.</string>
    <string name="Addtocart">Add to cart</string>
    <string name="buy">Buy</string>
    <string name="MyCart">My Cart</string>
    <string name="itemamount">2 Items in the cart</string>
    <string name="SelectAll">Select All</string>
    <string name="ClearAll">Clear All</string>
    <string name="one">1</string>
    <string name="Selecteditem">Selected item</string>
    <string name="DeliveryCharges">Delivery Charges</string>
    <string name="Total">Total</string>
    <string name="Checkout">Checkout</string>
    <string name="price3">Rs.2200.00</string>
    <string name="price4">Rs. 100.00</string>
    <string name="price5">Rs.2300.00</string>
    <string name="DeliveryAddress">Delivery Address</string>
    <string name="AddNewAddress">Add New Address</string>
    <string name="Home">Home</string>
    <string name="address">No.213,New Kandy Road, Malabe</string>
    <string name="telNumber">0716785934</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="CashonDelivery">Cash on Delivery</string>
    <string name="CreditCardDelivery">Credit Card Delivery</string>
    <string name="ConfirmOrder">Confirm Order</string>
    <string name="SubTotal">Sub Total</string>

</resources>